@@ -1739,22 +1739,31 @@ SimileAjax.Graphics._arrowOffsets={top:0,bottom:9,left:1,right:8};
 SimileAjax.Graphics._bubblePadding=15;
 SimileAjax.Graphics._bubblePointOffset=6;
 SimileAjax.Graphics._halfArrowWidth=18;
-SimileAjax.Graphics.createBubbleForContentAndPoint=function(E,D,B,A,C){if(typeof A!="number"){A=300;
-}E.style.position="absolute";
-E.style.left="-5000px";
-E.style.top="0px";
-E.style.width=A+"px";
-document.body.appendChild(E);
-window.setTimeout(function(){var F=E.scrollWidth+10;
-var H=E.scrollHeight+10;
-var G=SimileAjax.Graphics.createBubbleForPoint(D,B,F,H,C);
-document.body.removeChild(E);
-E.style.position="static";
-E.style.left="";
-E.style.top="";
-E.style.width=F+"px";
-G.content.appendChild(E);
-},200);
+SimileAjax.Graphics.createBubbleForContentAndPoint=function(F,E,C,B,D,A){if(typeof B!="number"){B=300;
+}if(typeof A!="number"){A=0;
+}F.style.position="absolute";
+F.style.left="-5000px";
+F.style.top="0px";
+F.style.width=B+"px";
+document.body.appendChild(F);
+window.setTimeout(function(){var H=F.scrollWidth+10;
+var J=F.scrollHeight+10;
+var G=0;
+if(A>0&&J>A){J=A;
+G=H-25;
+}var I=SimileAjax.Graphics.createBubbleForPoint(E,C,H,J,D);
+document.body.removeChild(F);
+F.style.position="static";
+F.style.left="";
+F.style.top="";
+if(G>0){var K=document.createElement("div");
+F.style.width="";
+K.style.width=G+"px";
+K.appendChild(F);
+I.content.appendChild(K);
+}else{F.style.width=H+"px";
+I.content.appendChild(F);
+}},200);
 };
 SimileAjax.Graphics.createBubbleForPoint=function(B,A,M,Q,H){function S(){if(typeof window.innerHeight=="number"){return{w:window.innerWidth,h:window.innerHeight};
 }else{if(document.documentElement&&document.documentElement.clientHeight){return{w:document.documentElement.clientWidth,h:document.documentElement.clientHeight};
